--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Conjure Oxide Reports</title>
   <meta name="description" content="Landing page for Conjure Oxide documentation and CI reports." />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      font-family: "Noto Color Emoji", system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
       background: #fff;
       color: #111;
       line-height: 1.6;
@@ -29,6 +30,11 @@
     h1 {
       margin: 0 0 12px;
       font-size: 42px;
+      line-height: 1.15;
+    }
+    h2 {
+      margin: 0 0 8px;
+      font-size: 36px;
       line-height: 1.15;
     }
     .lead {
@@ -56,7 +62,82 @@
       justify-content: space-between;
       align-items: baseline;
     }
+    
+    #wotd-section {
+      margin-top: 46px;
+      margin-bottom: 46px;
+    }
+    
+    #wotd-image {
+      margin-top: 16px;
+      height: 800px;
+      width: auto;
+      max-width: 100%;
+      display: block;
+    }
   </style>
+  <script>
+    // sorry, this is partially chat gptd :)
+    let images = [
+      'https://i.kym-cdn.com/photos/images/original/002/674/218/9e7.jpeg',
+      'https://i.kym-cdn.com/photos/images/original/002/570/739/4b3.jpg',
+      'https://i.kym-cdn.com/photos/images/original/002/570/738/644.jpg',
+      'https://i.kym-cdn.com/photos/images/original/002/570/734/ffb.jpg',
+      'https://i.kym-cdn.com/photos/images/original/002/570/737/fad.jpg',
+      'https://i.kym-cdn.com/photos/images/original/002/570/736/b23.jpg',
+      'https://i.kym-cdn.com/photos/images/original/002/570/735/448.jpg',
+      'https://i.kym-cdn.com/photos/images/original/002/570/718/3c2.jpg',
+      'https://i.kym-cdn.com/photos/images/original/002/570/727/cbe.jpg',
+      'https://i.kym-cdn.com/photos/images/original/002/570/733/6b5.jpg',
+      'https://i.kym-cdn.com/photos/images/original/002/570/726/afd.jpg',
+      'https://i.kym-cdn.com/photos/images/original/002/570/688/bb7.jpg',
+      'https://i.kym-cdn.com/photos/images/original/002/570/686/5df.jpg',
+      'https://i.kym-cdn.com/photos/images/original/002/570/713/e3e.jpg',
+      'https://i.kym-cdn.com/photos/images/original/002/570/687/da5.jpg',
+      'https://i.kym-cdn.com/photos/images/original/002/570/685/05a.jpg',
+      'https://i.kym-cdn.com/photos/images/original/002/570/683/801.jpg',
+      'https://i.kym-cdn.com/photos/images/original/002/570/682/857.jpg',
+      'https://i.kym-cdn.com/photos/images/original/002/570/668/0a2.png',
+      'https://i.kym-cdn.com/photos/images/original/002/570/669/54d.png',
+    ];
+
+    function getHourBasedIndex() {
+      // Use the current Unix hour and add some randomness
+      var hourSeed = Math.floor(Date.now() / 3600000);
+      var mixed = (hourSeed * 9301 + 49297) % 233280;
+      return Math.abs(mixed) % images.length;
+    }
+
+    function getRandomIndex(excludeIndex) {
+      if (images.length <= 1) {
+        return 0;
+      }
+      var nextIndex = excludeIndex;
+      while (nextIndex === excludeIndex) {
+        nextIndex = Math.floor(Math.random() * images.length);
+      }
+      return nextIndex;
+    }
+
+    function setImageByIndex(index) {
+      var imageElement = document.getElementById('wotd-image');
+      imageElement.src = images[index];
+      imageElement.dataset.index = String(index);
+    }
+
+    window.onload = function() {
+      var initialIndex = getHourBasedIndex();
+      setImageByIndex(initialIndex);
+
+      // cycle wizard images on click
+      var imageElement = document.getElementById('wotd-image');
+      imageElement.addEventListener('click', function() {
+        var currentIndex = parseInt(imageElement.dataset.index || '0', 10);
+        var nextIndex = getRandomIndex(currentIndex);
+        setImageByIndex(nextIndex);
+      });
+    };
+  </script>
 </head>
 
 <body>
@@ -85,6 +166,11 @@
         <div class="item-desc">Documentation coverage reports for tracking public API docs.</div>
       </li>
     </ul>
+
+    <div id="wotd-section">
+      <h2><a href="https://knowyourmeme.com/memes/wizardposting">Wizard meme</a> of the hour!&#10024;</h2>
+      <img id="wotd-image" src="https://i.kym-cdn.com/photos/images/newsfeed/002/570/727/cbe.jpg" alt="wizard meme of the day">
+    </div>
 
     <footer>
       <div>
