--- a/main/book/documentation/LSP/Essence-Error-Catalog-for-LSP-Error-Underlining-implementation.html
+++ b/main/book/documentation/LSP/Essence-Error-Catalog-for-LSP-Error-Underlining-implementation.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Github Actions: Cookbook - Conjure Oxide</title>
+        <title>Essence Error Catalog for Error Underlining - Conjure Oxide</title>
 
 
         <!-- Custom HTML head -->
@@ -176,128 +176,127 @@
 
                 <div id="mdbook-content" class="content">
                     <main>
-                        <!-- TODO: Edit this -->
-<h1 id="github-actions-cookbook"><a class="header" href="#github-actions-cookbook">Github Actions Cookbook</a></h1>
-<ul>
-<li>This document lists common patterns and issues we’ve had in our Github actions, and practical solutions to them.</li>
-<li>The first point of reference should be the official documentation, but if that is ever unclear, here would be a good place to look!</li>
-</ul>
-<p>Terminology used in this document:</p>
-<ul>
-<li>A <em>workflow</em> contains multiple independently ran <em>tasks</em>. Each task runs a series of <em>steps</em>. Steps can call predefined <em>actions</em>, or run shell commands.</li>
-</ul>
-<h2 id="i-want-to-have-a-step-output-multilined--complex-text"><a class="header" href="#i-want-to-have-a-step-output-multilined--complex-text">I want to have a step output multilined / complex text</a></h2>
-<pre><code class="language-yml">- name: Calculate PR doc coverage
-  id: prddoc
-  run: |
-    RUSTDOCFLAGS='-Z unstable-options --show-coverage' cargo +nightly doc --workspace --no-deps &gt; coverage.md
-    echo 'coverage&lt;&lt;EOFABC' &gt;&gt; $GITHUB_OUTPUT
-    echo "$(cat coverage.md)" &gt;&gt; $GITHUB_OUTPUT
-    echo 'EOFABC' &gt;&gt; $GITHUB_OUTPUT```
+                        <h1 id="syntax-errors"><a class="header" href="#syntax-errors">Syntax Errors</a></h1>
+<p>(Will produce an invalid CST)</p>
+<h3 id="1-missing-token-eg-variable-domain-expression"><a class="header" href="#1-missing-token-eg-variable-domain-expression">1. Missing Token (e.g variable, Domain, Expression)</a></h3>
+<p>Description: expected token is absent
+Detection: Empty node or a missing child node. (MISSING node is inserted)
+Example: missing variable name</p>
+<pre><code class="language-text">find: bool
 </code></pre>
-<p>The entire output of <code>cargo doc</code> can be substituted into later jobs by using <code>${{ steps.prdoc.outputs.coverage }}</code></p>
-<h2 id="workflow_run-i-want-a-workflow-that-runs-on-a-pr-and-can-write-to-the-repo"><a class="header" href="#workflow_run-i-want-a-workflow-that-runs-on-a-pr-and-can-write-to-the-repo">workflow_run: I want a workflow that runs on a PR and can write to the repo</a></h2>
-<p>PR branches and their workflows typically live in on a branch on an external fork. Therefore, they cannot write to the repository. The solution is to split things into two workflows - one that runs on the PR with read-only permissions, and one that runs on main and can write to the repository. This is called a <code>workflow_run</code> workflow. Read <a href="https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#workflow_run">the docs</a>.</p>
-<p><strong>The workflow_run workflow should not run any user provided code as it has secrets in scope.</strong></p>
-<h2 id="i-want-to-access-the-calling-pr-in-a-workflow_run-workflow"><a class="header" href="#i-want-to-access-the-calling-pr-in-a-workflow_run-workflow">I want to access the calling PR in a workflow_run workflow</a></h2>
-<p><code>workflow_run</code> jobs do not get access to the calling workflows detail. While one can access some things via the Github API such as head_sha, head_repo, this may not give any PR information. <a href="https://securitylab.github.com/research/github-actions-preventing-pwn-requests/">Github</a> recommends saving the PR number to an artifact, and using this number to fetch the PR info through the API:</p>
-<p>Example from <a href="https://securitylab.github.com/research/github-actions-preventing-pwn-requests/">this github blog post</a> - see this for more explanation and details!</p>
-<pre><code class="language-yml">name: Receive PR
-
-# read-only repo token
-# no access to secrets
-on:
-  pull_request:
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:        
-      - uses: actions/checkout@v2
-
-      # imitation of a build process
-      - name: Build
-        run: /bin/bash ./build.sh
-
-      - name: Save PR number
-        run: |
-          mkdir -p ./pr
-          echo ${{ github.event.number }} &gt; ./pr/NR
-      - uses: actions/upload-artifact@v2
-        with:
-          name: pr
-          path: pr/
+<p>Example: missing Expression</p>
+<pre><code class="language-text">letting x be 
 </code></pre>
-<pre><code class="language-yml">name: Comment on the pull request
-
-# read-write repo token
-# access to secrets
-on:
-  workflow_run:
-    workflows: ["Receive PR"]
-    types:
-      - completed
-
-jobs:
-  upload:
-    runs-on: ubuntu-latest
-    if: &gt;
-      github.event.workflow_run.event == 'pull_request' &amp;&amp;
-      github.event.workflow_run.conclusion == 'success'
-    steps:
-      - name: 'Download artifact'
-        uses: actions/github-script@v3.1.0
-        with:
-          script: |
-            var artifacts = await github.actions.listWorkflowRunArtifacts({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               run_id: ${{github.event.workflow_run.id }},
-            });
-            var matchArtifact = artifacts.data.artifacts.filter((artifact) =&gt; {
-              return artifact.name == "pr"
-            })[0];
-            var download = await github.actions.downloadArtifact({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               artifact_id: matchArtifact.id,
-               archive_format: 'zip',
-            });
-            var fs = require('fs');
-            fs.writeFileSync('${{github.workspace}}/pr.zip', Buffer.from(download.data));
-      - run: unzip pr.zip
-
-      - name: 'Comment on PR'
-        uses: actions/github-script@v3
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            var fs = require('fs');
-            var issue_number = Number(fs.readFileSync('./NR'));
-            await github.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: issue_number,
-              body: 'Everything is OK. Thank you for the PR!'
-            });
-
+<h3 id="2-missing-keyword"><a class="header" href="#2-missing-keyword">2. Missing Keyword</a></h3>
+<p>Description: a token appears where a different token/keyword is expected
+Detection: ERROR node containing all the tokens where that failed to match the grammar</p>
+<p>Example: missing colon, <code>int</code> is unexpected (here <code>x</code> and <code>int</code> will be children of the ERROR node)</p>
+<pre><code class="language-text">find x int
 </code></pre>
-<h2 id="how-do-i-get-x-commit-inside-a-pr-workflow-what-do-all-the-different-github-shas-mean"><a class="header" href="#how-do-i-get-x-commit-inside-a-pr-workflow-what-do-all-the-different-github-shas-mean">How do I get x commit inside a PR workflow? What do all the different github sha’s mean?</a></h2>
-<p><strong>If you are running in a workflow_run workflow, you will need to get the calling PR first. See <a href="https://github.com/conjure-cp/conjure-oxide/wiki/_new#i-want-to-access-the-calling-pr-in-a-workflow_run-workflow">I want to access the calling PR in a workflow_run workflow</a> instead.</strong></p>
-<p>The default <code>github.sha</code> is a temporary commit representing the state of the repo should the PR be merged now. You probably want <code>github.event.pull_request.head.sha</code>. Read <a href="https://www.kenmuse.com/blog/the-many-shas-of-a-github-pull-request/">The many SHAs of a github pull request</a>.</p>
-<hr>
-<p><em>This section had been taken from the ‘Github Actions’ page of the conjure-oxide wiki</em></p>
+<h3 id="3-unexpected-token"><a class="header" href="#3-unexpected-token">3. Unexpected Token</a></h3>
+<p>Description: a token appearing after a valid construct is complete
+Detection: ERROR node containing the extra token (ERROR node will likely be the last child of a valid construct)
+Example: second <code>)</code> is extra</p>
+<pre><code class="language-text">find x: int(1..2))
+</code></pre>
+<h3 id="4-invalid-token"><a class="header" href="#4-invalid-token">4. Invalid Token</a></h3>
+<p>Description: token is malformed or not part of the grammar
+Detection: look for an ERROR node with the invalid token
+Example: <code>@int</code> is not a valid token (ERROR node with <code>@</code>)</p>
+<pre><code class="language-text">find x: @int
+</code></pre>
+<p>Conjur does not identify <code>int</code> at all, just says “Skipped token”, “Missing Domain”
+Tree-Sitter in conjure-oxide sees <code>int</code> as a valid token but has an ERROR node with <code>@</code> before.
+So in Conjure the same error as Missing Token but might make sense to separate due to different CST structures.</p>
+<h3 id="5-unclosed-delimiter"><a class="header" href="#5-unclosed-delimiter">5. Unclosed Delimiter</a></h3>
+<p>Description: unmatched or missing closing bracket, parenthesis, brace
+Detection: MISSING node “)”
+Example: missing <code>)</code></p>
+<pre><code class="language-text">find x: int(1..2
+</code></pre>
+<p>Conjure allows it but since out grammar enforces it Tree-Sitter produces an error.</p>
+<h3 id="6-unsupported-statements"><a class="header" href="#6-unsupported-statements">6. Unsupported Statements</a></h3>
+<p>Description: statement not recognised by Essence grammar
+Detection: ERROR node with the unrecognised statement
+Example:</p>
+<pre><code class="language-text">find x: int(1..5)
+print x 
+</code></pre>
+<p>Conjure doesn’t recognise <code>print x</code> as a separate invalid statement.</p>
+<h3 id="7-general-syntax-error"><a class="header" href="#7-general-syntax-error">7. General Syntax Error</a></h3>
+<p>All the other cases that cause an ERROR node in the CST tree.</p>
+<h1 id="semantic-errors"><a class="header" href="#semantic-errors">Semantic Errors</a></h1>
+<p>(Will produce a valid CST and AST, now can only detected at runtime, e.g typecheking)</p>
+<h3 id="1-keywords-as-identifiers"><a class="header" href="#1-keywords-as-identifiers">1. Keywords as Identifiers</a></h3>
+<p>Description: token’s name is not allowed<br>Detection: compare the variable names against the set of keywords
+Example: Keyword “bool” used as a variable name</p>
+<pre><code class="language-text">find bool: bool
+</code></pre>
+<pre><code class="language-text">find x: letting
+</code></pre>
+<p>Conjure doesn’t allow it but Tree-Sitter does so we will have to check as part of semantic checks.</p>
+<h3 id="2-omitted-declaration"><a class="header" href="#2-omitted-declaration">2. Omitted Declaration</a></h3>
+<p>Description: variable not declared
+Detection: save the declared variables and check if the ones used in expressions are in the declared set
+Example: x was not declared before</p>
+<pre><code class="language-text">find y: int (1..4)
+such that x = 5
+</code></pre>
+<h3 id="3-invalid-domain"><a class="header" href="#3-invalid-domain">3. Invalid Domain</a></h3>
+<p>Description: logically or mathematically invalid bounds/domain + infinite domain</p>
+<p>Example: a bigger value before smaller</p>
+<pre><code class="language-text">find x: int(10..5)
+</code></pre>
+<p>Conjure doesn’t flag as error just says no solutions found.</p>
+<p>Example: infinite domain</p>
+<pre><code class="language-text">find x: int(1..) 
+</code></pre>
+<p>Might want to restrict infinite domain with the grammar so it could be a syntax error.</p>
+<h3 id="4-type-mismatch"><a class="header" href="#4-type-mismatch">4. Type Mismatch</a></h3>
+<p>Description: attempt to do an operation on illegal types</p>
+<p>Example: cannot add integer and boolean</p>
+<pre><code class="language-text">letting y be true 
+find x: int (5..10)
+such that 5 + y = 6
+</code></pre>
+<h3 id="5-unsafe-division"><a class="header" href="#5-unsafe-division">5. Unsafe division</a></h3>
+<p>Description: cannot divide/modulo by zero</p>
+<p>Example: cannot divide by zero</p>
+<pre><code class="language-text">find x: int(5..10)
+such that x/0 = 3
+</code></pre>
+<p>Conjure allows, proceeds to run the solver but just outputs no solutions. We should disallow.</p>
+<h3 id="6-invalid-indexing-in-tuples-and-matrices"><a class="header" href="#6-invalid-indexing-in-tuples-and-matrices">6. Invalid indexing in tuples and matrices</a></h3>
+<p>Description: Tuples and matrices are indexed from . Negative, zero or index out of bounds is invalid</p>
+<p>Example: s tuple index of out bounds</p>
+<pre><code class="language-text">letting s be tuple(0,1,1,0)
+letting t be tuple(0,0,0,1)
+find a : bool such that a = (s[5] = t[1]) $ true
+</code></pre>
+<h1 id="possible-semantic-errors-per-statement-type"><a class="header" href="#possible-semantic-errors-per-statement-type">Possible semantic errors per statement type</a></h1>
+<p>(All syntactic errors are relevant for each)</p>
+<h2 id="declarations"><a class="header" href="#declarations">Declarations</a></h2>
+<h3 id="find-statement"><a class="header" href="#find-statement">Find Statement</a></h3>
+<p>(Declaring decision variables)</p>
+<p>Format: <em>“find”</em> <strong>Name</strong> <em>“:”</em> <strong>Domain</strong></p>
+<p>Semantic Errors: Keyword as Token, Invalid Domain</p>
+<h3 id="letting-statement"><a class="header" href="#letting-statement">Letting Statement</a></h3>
+<p>(Declaring aliases)</p>
+<p>Formats: <em>“letting”</em> <strong>Name</strong> <em>“be”</em> <strong>Expression</strong> | <em>“letting”</em> <strong>Name</strong> <em>“be”</em> <em>“domain”</em> <strong>Domain</strong></p>
+<p>Semantic Errors: All except Omitted Declaration</p>
+<h3 id="constraints"><a class="header" href="#constraints">Constraints</a></h3>
+<p>Format: <em>“such that”</em> list(<strong>Expression</strong>, <em>“,”</em>)</p>
+<p>Semantic Errors: All except for Invalid Domain</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../../developers_guide/ci_cd/coverage.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../../documentation/sets/Conjure-Vertical-Set-Rules-Occurrence-Representation.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <span class=fa-svg><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --><path d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg></span>
                             </a>
 
-                            <a rel="next prefetch" href="../../documentation/Essence-Parser.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../../documentation/testing/ideal-scenario-of-testing.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <span class=fa-svg><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --><path d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"/></svg></span>
                             </a>
 
@@ -307,11 +306,11 @@ jobs:
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../../developers_guide/ci_cd/coverage.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../../documentation/sets/Conjure-Vertical-Set-Rules-Occurrence-Representation.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <span class=fa-svg><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --><path d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg></span>
                     </a>
 
-                    <a rel="next prefetch" href="../../documentation/Essence-Parser.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../../documentation/testing/ideal-scenario-of-testing.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <span class=fa-svg><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --><path d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"/></svg></span>
                     </a>
             </nav>
